# WSAmateur

./: .gitignore  CMakeLists.txt  INSTALL  README.md  cardImageLinks.json  cards.db
abilities/lib/: CMakeLists.txt  abilities.h
abilities/lib/abilities/: ability.h  asnCard.h  basicTypes.h  condition.h  cost.h  effect.h  multiplier.h  number.h  target.h  trigger.h
abilities/lib/codecs/: decode.h  decodeAbility.cpp  decodeBasicTypes.cpp  decodeCard.cpp  decodeCondition.cpp  decodeEffect.cpp  decodeMultiplier.cpp  decodeTrigger.cpp  encDecUtils.h  encode.h  encodeAbility.cpp  encodeBasicTypes.cpp  encodeCard.cpp  encodeCondition.cpp  encodeEffect.cpp  encodeMultiplier.cpp  encodeTrigger.cpp  print.h  printAbility.cpp  printCard.cpp  printCondition.cpp  printCost.cpp  printEffect.cpp  printTrigger.cpp  printUtils.cpp
abilities/tools/abilityMaker/: AutoAbility.qml  CMakeLists.txt  Keywords.qml  Trigger.qml  abilityComponent.cpp  abilityComponent.h  abilityMaker.cpp  abilityMaker.h  arrayOfAbilitiesComponent.cpp  arrayOfAbilitiesComponent.h  arrayOfConditionsComponent.cpp  arrayOfConditionsComponent.h  arrayOfEffectsComponent.cpp  arrayOfEffectsComponent.h  arrayOfTriggersComponent.cpp  arrayOfTriggersComponent.h  baseComponent.cpp  baseComponent.h  cardComponent.cpp  cardComponent.h  chooseCardComponent.cpp  chooseCardComponent.h  conditionComponent.cpp  conditionComponent.h  conditionImplComponent.cpp  conditionImplComponent.h  costComponent.cpp  costComponent.h  dbControls.cpp  dbControls.h  dbManager.cpp  dbManager.h  effectComponent.cpp  effectComponent.h  effectImplComponent.cpp  effectImplComponent.h  hardcodedAbilities.cpp  hardcodedAbilities.h  hardcodedTriggers.cpp  main.cpp  (+16 more)
abilities/tools/abilityMaker2/: AbilityMaker.h  CMakeLists.txt  Place.h  ability.cpp  ability.h  abilityMaker.cpp  applicationData.cpp  applicationData.h  array.cpp  array.h  asnTypeConstructor.cpp  asnTypeConstructor.h  baseComponent.cpp  baseComponent.h  card.cpp  card.h  cardSpecifier.cpp  cardSpecifier.h  componentHelper.cpp  componentHelper.h  componentIdParser.cpp  componentIdParser.h  componentManager.cpp  componentManager.h  componentOpener.cpp  componentOpener.h  condition.cpp  condition.h  conditionInit.cpp  conditionInit.h  effect.cpp  (+26 more)
client/: CMakeLists.txt  qml.qrc  wsamateur.rc
client/qml/: AbilityButton.qml  ActivatedAbility.qml  ActivatedAbilityList.qml  AttributeChangeAnimation.qml  Card.qml  CardGlow.qml  CardInfoFrame.qml  CardTextFrame.qml  CardsView.qml  CardsViewColumn.qml  ChoiceDialog.qml  Climax.qml  Clock.qml  Deck.qml  EndOfGame.qml  EndOfGameNotice.qml  GamePreparationWindow.qml  GameStopNotice.qml  GameWindow.qml  Hand.qml  HelpText.qml  Level.qml  LobbyWindow.qml  MainButton.qml  MainWindow.qml  Memory.qml  MenuButton.qml  MovingCard.qml  MulliganHeader.qml  OrderedCardsView.qml  ResolutionZone.qml  Stage.qml  StageCard.qml  StagePlace.qml  StartWindow.qml  Stock.qml  TopDeck.qml  TurnIndicator.qml  WaitingRoom.qml  main.qml  (+1 more)
client/src/: TextFrameModel.h  abilityEventProcessing.cpp  abilityModel.cpp  abilityModel.h  activatedAbilities.cpp  activatedAbilities.h  activatedAbilityModel.cpp  activatedAbilityModel.h  application.cpp  application.h  attributeChange.h  card.cpp  card.h  cardModel.cpp  cardModel.h  cardZone.cpp  cardZone.h  checkTiming.cpp  choiceDialog.cpp  choiceDialog.h  client.cpp  client.h  clientConnection.cpp  clientConnection.h  commonCardZone.cpp  commonCardZone.h  deck.cpp  deck.h  deckMenu.cpp  deckMenu.h  deckMenuModel.cpp  deckMenuModel.h  deckUtils.cpp  deckUtils.h  deckView.cpp  deckView.h  decksListWindow.cpp  decksListWindow.h  filesystemPaths.cpp  filesystemPaths.h  (+53 more)
common/: CMakeLists.txt  abilityPlayer.h  abilityUtils.cpp  abilityUtils.h  attributeChange.h  cardBuffs.cpp  cardDatabase.cpp  cardDatabase.h  cardImprint.h  cardInfo.cpp  cardInfo.h  commands.h  condition.cpp  connection.h  coroutineTask.h  deckList.cpp  deckList.h  playAbility.cpp  playEffect.cpp  server.cpp  server.h  serverCard.cpp  serverCard.h  serverCardZone.cpp  serverCardZone.h  serverGame.cpp  serverGame.h  serverPlayer.cpp  serverPlayer.h  serverProtocolHandler.cpp  serverProtocolHandler.h  serverStage.cpp  serverStage.h  trigger.cpp
common/globalAbilities/: globalAbilities.cpp  globalAbilities.h  refreshPoint  wind
common/proto/: CMakeLists.txt  abilities.proto  abilityEvents.proto  cardAttribute.proto  gameCommand.proto  gameEvent.proto  lobbyCommand.proto  lobbyEvent.proto  moveCommands.proto  moveEvents.proto  phaseCommand.proto  phaseEvent.proto  serverMessage.proto
core/: CMakeLists.txt  abilityContext.h  abilityPlayer.cpp  abilityPlayer.h  abilityUtils.cpp  abilityUtils.h  attributeChange.h  buff.cpp  cardBuffManager.cpp  cardBuffManager.h  cardBuffs.cpp  cardDatabase.cpp  cardDatabase.h  cardImprint.h  cardInfo.h  commands.h  condition.cpp  connection.h  connectionManager.cpp  connectionManager.h  deckList.cpp  deckList.h  hardcodedEffects.h  imageLinks.cpp  imageLinks.h  lookRevealEffects.cpp  moveCardEffect.cpp  moveParams.h  multipliers.cpp  networkUtils.h  playAbility.cpp  playEffect.cpp  playHardcodedEffect.cpp  playerBuffManager.cpp  playerBuffManager.h  server.cpp  server.h  serverCard.cpp  serverCard.h  serverCardZone.cpp  (+14 more)
core/globalAbilities/: book  charWithInsufficientPower  choice  delayedAbility.h  door  gate  globalAbilities.cpp  globalAbilities.h  globalEncore  shot  standby  treasure  wind
core/hardcodedEffects/: chooseGivenTarget.cpp
core/proto/: CMakeLists.txt  ability.proto  abilityCommands.proto  abilityEvents.proto  attackType.proto  cardAttribute.proto  commandContainer.proto  gameCommand.proto  gameEvent.proto  gameInfo.proto  inviteRefusalReason.proto  lobbyCommand.proto  lobbyEvent.proto  moveEvents.proto  phaseEvent.proto  playerInfo.proto  sessionCommand.proto  sessionEvent.proto  userInfo.proto
server/: CMakeLists.txt  connectionPool.cpp  connectionPool.h  main.cpp  networkConnectionManager.cpp  networkConnectionManager.h  serverLogger.cpp  serverLogger.h  tcpConnection.cpp  tcpConnection.h  tcpServer.cpp  tcpServer.h
(+238 files in other folders)
